Bug 191719 - krita does NOT save ppp (dpi) information
Summary: krita does NOT save ppp (dpi) information
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Cyrille Berger
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-05-05 19:25 UTC by jesusda
Modified: 2009-11-12 21:42 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description jesusda 2009-05-05 19:25:23 UTC
Version:           1.6.3 (using 3.5.10, Debian Package 4:3.5.10.dfsg.1-1+b1 (lenny/sid))
Compiler:          Target: x86_64-linux-gnu
OS:                Linux (x86_64) release 2.6.26-1-amd64

Krita does not save the ppp dpi information.

Then, you load a RGB Image, you convert it to CMYK, and save it to send offset press, but the information about dpi (ppp) dissapears. Then, the cmyk jpg is not usefull. :(

It is a little thing, but it is VERY IMPORTANT to solve it to allow Krita be used for professional printing.

;)
Comment 1 Elián Hanisch 2009-05-30 08:31:41 UTC
I can confirm that saving as jpg or png the dpi info isn't exported correctly, next time you open the saved file dpi defaults to 72

1. start a new rgb image
2. check with image > properties the dpi value (in my case from a new image is 100)
3. save as jpg or png
4. open the saved file
check again the image properties, is says 72 dpi now.

dpi is saved correctly in kra
Comment 2 Halla Rempt 2009-05-30 11:59:51 UTC
For sending to a printer, I'd use tiff, but apart from that, ACK. Assigned to Cyrille, since he knows these filters best.
Comment 3 mrdocs 2009-07-18 13:53:02 UTC
duplicate of #134302
Comment 4 Cyrille Berger 2009-11-05 22:59:37 UTC
SVN commit 1045370 by berger:

Fix: saving/loading of dpi information to jpeg files

CCBUG:191719


 M  +26 -1     kis_jpeg_converter.cc  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1045370
Comment 5 Cyrille Berger 2009-11-05 23:12:36 UTC
SVN commit 1045372 by berger:

Fix: loading/saving dpi information to png

CCBUG:191719


 M  +16 -0     kis_png_converter.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1045372
Comment 6 Cyrille Berger 2009-11-12 21:42:25 UTC
SVN commit 1048162 by berger:

Fix: saving of resolution to jpeg and png files

BUG:191719


 M  +26 -1     plugins/formats/jpeg/kis_jpeg_converter.cc  
 M  +16 -0     ui/kis_png_converter.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1048162