Fix: saving of resolution to jpeg and png files

BUG:191719

svn path=/branches/koffice/2.1/koffice/; revision=1048162